review catalog grid layout

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -3,7 +3,7 @@ $card-width: 200px;
 .catalog {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, $card-width);
+  grid-template-columns: repeat(4, $card-width);
   gap: 48px;
 
   &__card {
